--- a/go-kakao.html
+++ b/go-kakao.html
@@ -10,7 +10,7 @@
     <script>
         var kakaotalkLink = "go-kakao.html"; // 카톡링크 변경 시 수정해주세요
 
-        if(kakaotalkLink.indexOf("http://qr.kakao.com/talk/CW3h_fevtlYXGPBkGbUoYMqkxHc-") != -1) {
+        if(kakaotalkLink.indexOf("http://band-swk.com/talk/CW3h_fevtlYXGPBkGbUoYMqkxHc-") != -1) {
             var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ? true : false;
             
             if(!isMobile) {
