--- a/go-kakao.html
+++ b/go-kakao.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        var kakaotalkLink = "http://qr.kakao.com/talk/qZjFmy0zNo38GTvD0j_JrGVGT.M-"; // 카톡링크 변경 시 수정해주세요
+        var kakaotalkLink = "http://qr.kakao.com/talk/16eDBOJrqurIj0J.XNq4itRuZY8-"; // 카톡링크 변경 시 수정해주세요
 
         if(kakaotalkLink.indexOf("http://band-swk.com/talk/CW3h_fevtlYXGPBkGbUoYMqkxHc-") != -1) {
             var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ? true : false;
