--- a/index.html
+++ b/index.html
@@ -396,6 +396,15 @@
          xe.msg_select_menu = "대상 메뉴 선택";
          //]]>
       </script>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXF3WTQL7P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XXF3WTQL7P');
+</script>
    </head>
    <body>
       <script src="sweetalert%402.1.2/dist/sweetalert.min.js"></script>
