--- a/go-kakao.html
+++ b/go-kakao.html
@@ -5,6 +5,15 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="No-Cache">
     <title>카카오톡 문의하기</title>
+       <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXF3WTQL7P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XXF3WTQL7P');
+</script>
 </head>
 <body>
     <script>
