--- a/ch1/3291.html
+++ b/ch1/3291.html
@@ -2,13 +2,13 @@
 <html lang="ko">
 <head>
      <!-- Google tag (gtag.js) -->
-<script async="" src="../gtag/js?id=G-0KXG2DYQZT"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXF3WTQL7P"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0KXG2DYQZT');
+  gtag('config', 'G-XXF3WTQL7P');
 </script>
       <!-- META -->
       <meta charset="utf-8">
