--- a/go-kakao.html
+++ b/go-kakao.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <script>
-        var kakaotalkLink = "http://qr.kakao.com/talk/zLx_.7ZrOnFWOFAjBzUtTmraKV8-"; // 카톡링크 변경 시 수정해주세요
+        var kakaotalkLink = "http://qr.kakao.com/talk/rUD5tC2t0RTaJilKH.Dh1cbiJeg-"; // 카톡링크 변경 시 수정해주세요
 
         if(kakaotalkLink.indexOf("http://band-swk.com/talk/CW3h_fevtlYXGPBkGbUoYMqkxHc-") != -1) {
             var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ? true : false;
